docs/04-Android/older/2.9.0/player/player-api/player-api/com.deezer.sdk.player.api/index.md
//[player-api](../../index.md)/[com.deezer.sdk.player.api](index.md)

# Package com.deezer.sdk.player.api

## Types

| Name                                                                          | Summary                                                                                                                                                                                                                                                                                                       |
| ----------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [DeezerOfflineService](-deezer-offline-service/index.md)                      | [androidJvm]<br/>interface [DeezerOfflineService](-deezer-offline-service/index.md)<br/>Interface to manage offline synchronization of **_Deezer_** content Synchronized content is downloaded on local device and can be played afterwards by the player of **_Deezer SDK_** even when the device is offline |
| [DeezerPlayer](-deezer-player/index.md)                                       | [androidJvm]<br/>interface [DeezerPlayer](-deezer-player/index.md) : [DeezerPlayerAction](-deezer-player-action/index.md), [DeezerPlayerInfo](-deezer-player-info/index.md)<br/>Public interface to manage player into the **_Deezer SDK_**                                                                   |
| [DeezerPlayerAction](-deezer-player-action/index.md)                          | [androidJvm]<br/>interface [DeezerPlayerAction](-deezer-player-action/index.md)<br/>Interface offering controls over playback of media represented by a [DeezerPlayable](../com.deezer.sdk.player.model/-deezer-playable/index.md) being currently played by **_Deezer SDK_**                                 |
| [DeezerPlayerInfo](-deezer-player-info/index.md)                              | [androidJvm]<br/>interface [DeezerPlayerInfo](-deezer-player-info/index.md)<br/>Interface exposing various information about current state of the player of **_Deezer SDK_**                                                                                                                                  |
| [DeezerPlayerLimitationListener](-deezer-player-limitation-listener/index.md) | [androidJvm]<br/>interface [DeezerPlayerLimitationListener](-deezer-player-limitation-listener/index.md)<br/>Listener to listen on **_Deezer Player_** playback limitations                                                                                                                                   |
| [DeezerPlayerSettings](-deezer-player-settings/index.md)                      | [androidJvm]<br/>interface [DeezerPlayerSettings](-deezer-player-settings/index.md)<br/>Public interface to set and get **_Deezer SDK Player_** settings. These settings are persisted through the sessions.                                                                                                  |
| [DeezerQueueList](-deezer-queue-list/index.md)                                | [androidJvm]<br/>interface [DeezerQueueList](-deezer-queue-list/index.md)<br/>Interface to manage queue of the **_Deezer SDK_** player                                                                                                                                                                        |
